@@ -4,7 +4,7 @@ use File::Basename;
 use File::Temp qw(tempdir);
 use Getopt::Long;
 use Mason;
-use JSON;
+use Mason::Util qw(json_decode);
 use strict;
 use warnings;
 
@@ -27,7 +27,7 @@ sub run {
     if ( $params{plugins} ) {
         $params{plugins} = [ split( /\s*,\s*/, $params{plugins} ) ];
     }
-    my %run_args = defined($args) ? %{ decode_json($args) } : ();
+    my %run_args = defined($args) ? %{ json_decode($args) } : ();
 
     my $tempdir = tempdir( 'mason-XXXX', TMPDIR => 1, CLEANUP => 1 );
     my $file;
